sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: identifier expected but 'false' found.
var chgt:Boolean == false
                    ^